Page Down key pages up, instead of down, in Overview pane #47138

Closed
opened 2016-01-08 00:36:32 +01:00 by Moon Caine · 8 comments

bug_report_-_Page_Down_becomes_Page_Up_in_Overview_after_1_press.blend

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
Shortly after opening a file, the Page Down key stops working as Page Down, but I only seen it happen in Overview. Page Down makes the screen scroll up, instead of down.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open attached file.
Move cursor to Overview pane.
Press Page Down to scroll down.
Press Page Up to scroll up.
Press Page Down. Overview Pane will no longer scroll down.
Try this: pull the scroll widget down to somewhere in the middle of the scroll bar's height, using the mouse.
Press Page Down. Overview pane scrolls up.

[bug_report_-_Page_Down_becomes_Page_Up_in_Overview_after_1_press.blend](https://archive.blender.org/developer/F271960/bug_report_-_Page_Down_becomes_Page_Up_in_Overview_after_1_press.blend) **System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Shortly after opening a file, the Page Down key stops working as Page Down, but I only seen it happen in Overview. Page Down makes the screen scroll up, instead of down. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open attached file. Move cursor to Overview pane. Press Page Down to scroll down. Press Page Up to scroll up. Press Page Down. Overview Pane will no longer scroll down. Try this: pull the scroll widget down to somewhere in the middle of the scroll bar's height, using the mouse. Press Page Down. Overview pane scrolls up.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mooncaine

Added subscriber: @mooncaine
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

What do you mean by "Overview Pane" do you mean the outline editor?

What do you mean by "Overview Pane" do you mean the outline editor?

Added subscriber: @mont29

Added subscriber: @mont29

Yes, he means the outliner. Confirmed.

Yes, he means the outliner. Confirmed.
Bastien Montagne self-assigned this 2016-01-08 09:46:12 +01:00

This issue was referenced by 5c69345edc

This issue was referenced by 5c69345edc0819f5b518ab06438cc72d4dfa86ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47138
No description provided.