Fix T47138: Page Down key pages up, instead of down, in Outliner.

Usual operator properties 'saving' after first execution... Double fix here, since being
explicit in keymap is good practice too.